client/assets/styles/scss/components/notifications.scss
.notification {
  position: fixed;
  z-index: $z-alert;

  // default animations
  &.ng-enter {
    animation: fade-in .3s ease-out;
  }

  &.ng-leave {
    animation: fade-in .3s ease-out reverse;
  }

  // sizes
  &.notification-sm {
    border-radius: $input-border-radius;
    height: $input-sm;
    line-height: $input-sm;
    padding: 0 15px;
  }

  &.notification-md {
    border-radius: $input-border-radius;
    height: $input-md;
    line-height: $input-md;
    padding: 0 15px;
  }

  &.notification-lg {
    border-radius: $input-border-radius-lg;
    border-width: 1px;
    max-width: 420px;
    min-width: 345px;
    padding: 15px 45px 15px 54px;
  }

  // position
  &.top-left {
    left: 6px;
    top: 6px;

    // override default
    &.ng-enter {
      animation-name: slide-right;
    }
  }

  &.top-right {
    right: 6px;
    top: 6px;

    // override default
    &.ng-enter {
      animation-name: slide-left;
    }
  }

  &.bottom-right {
    bottom: 6px;
    right: 6px;

    // override default
    &.ng-enter {
      animation-name: slide-left;
    }
  }

  &.bottom-left {
    bottom: 6px;
    left: 6px;

    // override default
    &.ng-enter {
      animation-name: slide-right;
    }
  }

  // colors
  &.green,
  &.orange {
    box-shadow: 0 2px 6px rgba($black,.2);
  }

  &.green {
    background: #64cc7a;

    .btn-close:hover {
      background: $green-dark;
    }

    .btn-close:active {
      background: $green-darker;
    }
  }

  &.orange {
    background: $orange-light;

    .anchor-left {
      color: $orange;
    }

    .btn-close:hover {
      background: $orange;
    }

    .btn-close:active {
      background: $orange-dark;
    }
  }

  // anchor for gravatar/icons
  .anchor-left {
    left: 15px;
    position: absolute;
    top: 15px;
  }

  // title
  .h4 {
    font-size: 17px;
    line-height: 1.4;
    margin-bottom: 3px;
  }

  // small
  .small {
    font-size: 15px;
    line-height: 1.2;

    &.link {
      display: block;
      margin-top: 9px;
    }
  }

  .icons-link-external {
    height: 13px;
    top: 3px;
  }

  // link
  .link {
    color: $white;
    display: inline-block;

    &.icons-intercom {
      display: inline-block; // override .small.link
      margin-left: 18px;

      &::after {
        left: -24px;
        position: absolute;
        top: 3px;
      }
    }
  }

  // close button
  .btn-close {
    height: 21px;
    position: absolute;
    right: 15px;
    top: 15px;
    width: 21px;
  }

  .icons-close {
    left: 0;
    position: absolute;
    top: 0;
  }

  // success animation
  .btn-state {
    background: $white;
    border-radius: 50%;
    height: 15px;
    left: -6px;
    line-height: 1;
    position: absolute;
    top: 16px;
    width: 15px;

    .iconnables {
      animation: scale-in-bounce .3s ease-in;
      height: 15px;
      width: 15px;
    }

    .icons-check {
      color: $green;
    }
  }

  // nag
  .p {
    border-top: 2px solid rgba($white,.3);
    font-size: 15px;
    margin-top: 12px;
    padding-top: 6px;

    .btn {
      margin-left: 3px;
    }
  }
}

